pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-096-setext_headings.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/096-setext_headings.md
---
[32m════════════════════════════════════════════════════════════════════════════════[0m

]1337;SetMark\[1m[34m━━ [0m[1m[34mFoo[0m

]1337;SetMark\[1m[34m━━ [0m[1m[34mBar[0m

Baz
