pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-100-setext_headings.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/100-setext_headings.md
---

[33mfoo
[0m

[32m════════════════════════════════════════════════════════════════════════════════[0m
